Bug 169219 - Frame with relative size and anchored to page changes size when opening properties.
Summary: Frame with relative size and anchored to page changes size when opening prope...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Frame
  Show dependency treegraph
 
Reported: 2025-11-02 18:11 UTC by loetmann29
Modified: 2025-11-22 19:27 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description loetmann29 2025-11-02 18:11:41 UTC
Description:
When a frame is anchored to the page and the size (width, height or both) is set to be relative to the entire page, then opening and closing the properties dialog of the frame keeps increasing the frame size.

Steps to Reproduce:
1. Create a new documentin Writer.
2. Insert -> Frame...
3. Set Anchor to "To page"
4. Set width to "Relative to Entire page"
5. Close frame property dialog
6. Reopen frame property dialog (on new frame: Context Menu -> properties...)
7. Close frame property dialog by clicking OK.



Actual Results:
Repeat steps 6 and 7 to see frame width increasing every time.

When the dialog opens, the text box for the width (or height) contains a bigger value than it should be.
Clicking OK applies this new bigger value.

The percentage value increases by a factor of 1.24 for each opening of the dialog.

Expected Results:
The size of the frame should not change on its own.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
This behavior was observed on two separate systems.
Libreoffice was newly installed.

System 1:
Version: 25.2.6.2 (X86_64) / LibreOffice Community
Build ID: 729c5bfe710f5eb71ed3bbde9e06a6065e9c6c5d
CPU threads: 24; OS: Windows 11 X86_64 (10.0 build 22631); UI render: default; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded

System 2:
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Ubuntu package version: 4:24.2.7-0ubuntu0.24.04.4
Calc: threaded
Comment 1 raal 2025-11-02 19:06:04 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c7b3ea692f293346fbbdf2a391d9d971c34fa1f2
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded


Version: 6.3.0.0.alpha1+
Comment 2 raal 2025-11-02 19:18:57 UTC
This seems to have begun at the below commit in bibisect repository/OS bibisect-linux-64-6.1.
Adding Cc: to Justin Luth ; Could you possibly take a look at this one?
Thanks
 4241cac77cbfc7eef9f539e1d095327d8a646100 is the first bad commit
commit 4241cac77cbfc7eef9f539e1d095327d8a646100
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sat Feb 24 16:12:29 2018 +0100

    source cffecd3c8d2d6b34726b8820468fadef93dd553d

50034: tdf#80282 swpagerelsize: corner case frame size max | https://gerrit.libreoffice.org/c/core/+/50034
Comment 3 Justin L 2025-11-10 19:49:31 UTC
I'm not sure why this was bibisected to my commit. This thing is completely unreliable at 6.1 oldest.

-Insert - Frame... - anchor To Page, and set width relative to page. (says 11%)
-OK - becomes huge. 
-Properties says width is 123%. Change to 12%
-OK - becomes tiny
-Properties say width is 2%.  Change to 3%
-OK - becomes huge (123% again).
Comment 4 Commit Notification 2025-11-12 15:21:31 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d5825b65bcfc06bd7062c76c4ef098835ffa1eab

tdf#169219 swpagerelsize ui: fix width percent value

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-11-12 15:21:34 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/059be5dc87b348cc923795bf5a07ab0696f8a8d4

tdf#169219 swpagerelsize ui: apply WidthPercentRelation changes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-11-12 15:21:36 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/03ee643e81cabed77d8b60329899d34e6b00b3f1

tdf#169219 swpagerelsize ui: don't limit toggle-on-percent to 100

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-11-12 15:21:39 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ad6e83caa695cca9ee25aa6f02c4d078311545b

tdf#169219 swpagerelsize ui: immediately apply new RefValue

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-11-13 14:03:08 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7c2f02497ccc026ccaf48fc3b0b109b78c93c592

tdf#169219 swrelpagesize ui: value may be changed even if % isn't

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-11-13 14:03:10 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d09c7badc6a12919a622126c87dc0fab32ca645

NFC cleanup after tdf#169219: value may be changed even if % isn't

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-11-13 14:03:13 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fe2381cb811d970453bd3fc1e67e1e36fa8f9abf

tdf#169219 swrelpagesize ui: update on relation changes

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-11-15 21:06:43 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c67c4e9947490a00d0c6a565c178302de3095eb

Revert "tdf#169219: value may be changed even if % isn't"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-11-15 21:09:46 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e029e619db0b12106cd561ea96d7004d5cb19bfc

tdf#169219 swrelpagesize ui: value may be changed even if % isn't #2

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 BogdanB 2025-11-22 19:27:28 UTC
Thanks, Justin, is ok (verified with info from description) with
Version: 26.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f8224b9625c26a7c92a289573765d4a201678d68
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

For comparison reason, is bad in:
Version: 25.8.3.1 (X86_64)
Build ID: 52ad9dd1c984050a9fb6932dbfb16e86a49e9758
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: ro-RO (en_US.UTF-8); UI: en-US
Calc: threaded